[metadata]
name = acsgeodist
description = Hubble-ACS Astrometric data analysis suite
long_description = Python tools to analyze ACS images and derive astrometric properties and corrections of the instrument
long_description_content_type = text/plain
keywords = astronomy, astrophysics, calibration, astrometry
author = Tri L Astraatmadja, Yotam Cohen
author_email = tastraatmadja@stsci.edu
license = BSD
license_file = LICENSE.rst
url = https://github.com/tastraatmadja/acsgeodist
edit_on_github = False
github_project = spacetelescope/stsci-package-template
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
zip_safe = False
setup_requires =
    setuptools_scm
install_requires =
    numpy>=1.17
    matplotlib>=3.5.2
    scipy>=1.7.3
    astropy>=4
python_requires = >=3.8

[options.extras_require]
test =
    pytest-astropy-header
    pytest-doctestplus
docs =
    sphinx-automodapi
    stsci_rtd_theme

[options.package_data]
packagename = data/*

[entry_points]
stsci-package-template-example = packagename.example_mod:main

[tool:pytest]
minversion = 5.0
norecursedirs = build docs/_build
astropy_header = True
doctest_plus = enabled

[flake8]
# Ignoring these for now:
# E221: multiple spaces before operator
# E226: missing whitespace around arithmetic operator
# E262: inline comment should start with '# '
# E265: block comment should start with '#'
# E501: line too long
# E704: multiple statements on one line (def)
# W504: line break after binary operator
ignore = E221,E226,E262,E265,E501,E704,W504
